Fix overlapping on collab editor menus
Portal out the dropdown menus so that they appear on top of all editors
regardless of the stacking context. In particular, when opening a long
menu that reaches down to the next editor, have the menu be on top of
the next editor.

--- a/javascript/src/frontend/collab_forms/editor.scss
+++ b/javascript/src/frontend/collab_forms/editor.scss
@@ -64,12 +64,12 @@
             background-color: #aaa;
         }
     }
+}
 
-    .szh-menu {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-    }
+.collab-edit-toolbar-menu {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 
     .szh-menu__item {
         font-size: 0.9rem;
